--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "blackrabbit",
-  "version": "0.0.0",
+  "name": "black-rabbit",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.html",
-  "dependencies": {
-    "less": "~1.6.0",
-    "grunt-cli": "~0.1.11"
-  },
-  "devDependencies": {},
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/tynielsen/black-rabbit.git"
-  },
-  "author": "Tyler Nielsen",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tynielsen/black-rabbit/issues"
-  },
-  "homepage": "https://github.com/tynielsen/black-rabbit"
+  "dependencies": {
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-changed": "^1.2.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-filesize": "0.0.6",
+    "gulp-less": "^3.0.2",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.2.2",
+    "run-sequence": "^1.0.2"
+  }
 }
